--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
             
-            <a class="link-button" href="https://www.facebook.com/love.pondit.92" target="-blank">FACEBOOK LINK</a>
+            <a class="link-button" href="https://www.facebook.com/profile.php?id=100007536647299" target="-blank">FACEBOOK LINK</a>
     
         </div>
          <div class="half-width">
